# Snatchy

./: .env_examlpe  .gitignore  Dockerfile  README.md  alembic.ini  api_server.Dockerfile  docker-compose.yml  flake.nix  pyproject.toml
api_server/: main.py
app/: main.py  test.py
app/domain/crawler/: crawlers.py  engines.py  parsers.py
app/domain/scheduler/: schedulers.py
app/domain/utils/: time.py
app/model/: session.py
app/model/migrations/: README  env.py
app/model/migrations/versions/: 61906c4153c8_add_flooring_to_realestaterecord.py  80c5d5a1509d_initial_commit.py  9f1e2d3c4b5a_add_crawl_target_runtime_override_columns.py  c8ea79f4b9d2_add_crawl_targets_table.py  d2e3f4a5b6c7_add_last_seen_to_real_estate_records.py  f1c2d3e4a5b6_add_source_url_to_real_estate_records.py
app/model/models/: __init__.py  models.py
app/model/types/: enums.py
app/service/: main.py
